Bug 495224 - Audio backend selection not saved
Summary: Audio backend selection not saved
Status: RESOLVED FIXED
Alias: None
Product: kasts
Classification: Applications
Component: general (other bugs)
Version First Reported In: 24.08.2
Platform: Flatpak Linux
: NOR normal
Target Milestone: ---
Assignee: bart
URL:
Keywords:
: 489911 (view as bug list)
Depends on:
Blocks:
 
Reported: 2024-10-23 08:00 UTC by kde.85zhb
Modified: 2025-04-02 08:09 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description kde.85zhb 2024-10-23 08:00:53 UTC
***
If you're not sure this is actually a bug, instead post about it at https://discuss.kde.org

If you're reporting a crash, attach a backtrace with debug symbols; see https://community.kde.org/Guidelines_and_HOWTOs/Debugging/How_to_create_useful_crash_reports

Please remove this comment after reading and before submitting - thanks!
***

SUMMARY
Audio backend selection not saved

STEPS TO REPRODUCE
1. Default Flatpak on VLC
2. Change to either GStreamer or Qt Multimedia
3. Play a podcast
4. Close the app


OBSERVED RESULT
5. Relaunch Kasts
6. In settings/general, audio backend back to VLC

EXPECTED RESULT
7. Should keep selection made on step 2.

Same apply for playback rate. 
This parameter should also be saved so we don't have to select at each Kasts run.

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
(available in the Info Center app, or by running `kinfo` in a terminal window)
Linux/KDE Plasma: Fedora KDE 40
KDE Plasma Version: 6.2.1
KDE Frameworks Version: 6.7.0
Qt Version: 6.7.2

ADDITIONAL INFORMATION
Comment 1 bart 2025-02-10 17:44:43 UTC
*** Bug 489911 has been marked as a duplicate of this bug. ***
Comment 2 Bug Janitor Service 2025-04-01 14:25:01 UTC
A possibly relevant merge request was started @ https://invent.kde.org/multimedia/kasts/-/merge_requests/270
Comment 3 bart 2025-04-02 08:09:40 UTC
Git commit 09c90105e5a8612fa733b90b3e31d1bf4f40d697 by Bart De Vries.
Committed on 01/04/2025 at 14:35.
Pushed by bdevries into branch 'master'.

Remember and restore the media backend

M  +7    -1    src/audiomanager.cpp
M  +8    -4    src/kmediasession/kmediasession.cpp
M  +1    -1    src/kmediasession/kmediasession.h
M  +18   -0    src/settingsmanager.kcfg

https://invent.kde.org/multimedia/kasts/-/commit/09c90105e5a8612fa733b90b3e31d1bf4f40d697