Remember and restore the media backend

BUG: 495224